--- a/09/backend/config/config.json
+++ b/09/backend/config/config.json
@@ -1,25 +1,26 @@
 {
   "development": {
+    "username": "root",
+    "password": null,
+    "database": "sample.db",
+    "host": "127.0.0.1",
     "dialect": "sqlite",
-    "storage": "sample.db"
+    "storage": "./sample.db"
   },
   "test": {
     "username": "root",
     "password": null,
-    "database": "database_test",
+    "database": "sample.db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
+    "dialect": "sqlite",
+    "storage": "./sample.db"
   },
   "production": {
     "username": "root",
     "password": null,
-    "database": "database_production",
+    "database": "sample.db",
     "host": "127.0.0.1",
-    "dialect": "mysql"
-  },
-  "naver": {
-    "clientId": "YOUR_NAVER_CLIENT_ID",
-    "clientSecret": "YOUR_NAVER_CLIENT_SECRET",
-    "redirectUri": "http://localhost:3000/auth/naver/callback"
+    "dialect": "sqlite",
+    "storage": "./sample.db"
   }
 }
